# population_growth

./: population_growth.ipynb  pyproject.toml
tests/: test_population_growth.py
