[tool.poetry]
name = "population_growth"
version = "0.1.0"
description = ""
authors = ["adpleach <adpleach@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
scipy = "^1.8.0"
statsmodels = "^0.13.2"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
jupyterlab = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
